sourceCompatibility = '1.8'
targetCompatibility = '1.8'

dependencies {
	compile project(':libLauncher')
	compile 'org.java-websocket:Java-WebSocket:1.3.9'
	compileOnly 'com.google.guava:guava:26.0-jre'
	compile files('../compat/authlib/authlib-clean.jar')
}
